Hierarchy check
- Validate that hierarchy is compatible when renaming class (only for
signature with hierarchy data)
- Do not trust small methods in inner classes unless hierarchy is not
simple or signature is complex enough